@@ -426,15 +426,17 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
   RDOC_SEARCH
 
   def self.run(options)
-    new(options[:gemdir], options[:port], options[:daemon]).run
+    new(options[:gemdir], options[:port], options[:daemon],
+        options[:addresses]).run
   end
 
-  def initialize(gem_dir, port, daemon)
+  def initialize(gem_dir, port, daemon, addresses = nil)
     Socket.do_not_reverse_lookup = true
 
     @gem_dir = gem_dir
     @port = port
     @daemon = daemon
+    @addresses = addresses
     logger = WEBrick::Log.new nil, WEBrick::BasicLog::FATAL
     @server = WEBrick::HTTPServer.new :DoNotListen => true, :Logger => logger
 
@@ -495,6 +497,38 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
       res['content-length'] = specs.length
     else
       res.body << specs
+    end
+  end
+
+  ##
+  # Creates server sockets based on the addresses option.  If no addresses
+  # were given a server socket for all interfaces is created.
+
+  def listen addresses = @addresses
+    addresses = [nil] unless addresses
+
+    listeners = 0
+
+    addresses.each do |address|
+      begin
+        @server.listen address, @port
+        @server.listeners[listeners..-1].each do |listener|
+          p listener.addr
+          host, port = listener.addr.values_at 2, 1
+          host = "[#{host}]" if host =~ /:/ # we don't reverse lookup
+          say "Server started at http://#{host}:#{port}"
+        end
+
+        listeners = @server.listeners.length
+      rescue SystemCallError
+        next
+      end
+    end
+
+    if @server.listeners.empty? then
+      say "Unable to start a server."
+      say "Check for running servers or your --bind and --port arguments"
+      terminate_interaction 1
     end
   end
 
@@ -716,9 +750,7 @@ div.method-source-code pre { color: #ffdead; overflow: hidden; }
   end
 
   def run
-    @server.listen nil, @port
-
-    say "Starting gem server on http://localhost:#{@port}/"
+    listen
 
     WEBrick::Daemon.start if @daemon
 
