@@ -78,6 +78,26 @@ class TestGemServer < RubyGemTestCase
                  Marshal.load(Gem.gunzip(@res.body))
   end
 
+  def test_listen
+    util_listen
+
+    out, err = capture_io do
+      @server.listen
+    end
+
+    assert_equal 1, @server.server.listeners.length
+  end
+
+  def test_listen_addresses
+    util_listen
+
+    out, err = capture_io do
+      @server.listen %w[a b]
+    end
+    
+    assert_equal 2, @server.server.listeners.length
+  end
+
   def test_quick_a_1_gemspec_rz
     data = StringIO.new "GET /quick/a-1.gemspec.rz HTTP/1.0\r\n\r\n"
     @req.parse data
@@ -304,6 +324,21 @@ class TestGemServer < RubyGemTestCase
     si.add_specs @a1, @a2
 
     assert_equal si, YAML.load(Gem.inflate(@res.body))
+  end
+
+  def util_listen
+    webrick = Object.new
+    webrick.instance_variable_set :@listeners, []
+    def webrick.listeners() @listeners end
+    def webrick.listen(host, port)
+      socket = Object.new
+      socket.instance_variable_set :@host, host
+      socket.instance_variable_set :@port, port
+      def socket.addr() [nil, @port, @host] end
+      @listeners << socket
+    end
+
+    @server.instance_variable_set :@server, webrick
   end
 
 end
